Progress on resume.

--- a/content/resume.tex
+++ b/content/resume.tex
@@ -1,10 +1,37 @@
 \documentclass[10pt,letterpaper]{article}
+\usepackage[margin=1in]{geometry}
+\usepackage[utf8]{inputenc}
+\usepackage[T1]{fontenc}
+\usepackage[stretch=10]{microtype}
+\usepackage{hyperref}
+\usepackage{tgpagella}
+% \usepackage{DejaVuSerif}
+\pagestyle{empty}
+
 \begin{document}
+
+\begin{center}
+{\Large \textbf{Zameer Manji}}
+
+% NOTE: Alternatively could have used \hfill
+
+\href{http://www.github.com/zmanji/}{www.github.com/zmanji}\ \ \textbullet
+\ \ \href{http://www.zameermanji.com}{http://www.zameermanji.com}\ \ \textbullet
+\ \ \href{malto:zmanji@gmail.com}{zmanji@gmail.com}
+
+\end{center}
+
+\hrule
+\vspace{-0.4em}
+\subsection*{Mission Statement}
+
 Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Quisque ut ante
 pulvinar mauris interdum euismod. Aliquam dui tellus, blandit at, tincidunt ac,
 feugiat id, nibh.
 
 Phasellus id metus. Aliquam erat volutpat. Donec fringilla. Donec euismod, velit
 quis adipiscing hendrerit, enim eros tempor mi, a hendrerit ipsum eros eget leo.
+
+\textcopyright
 
 \end{document}
