Added More Structure to Resume.

--- a/content/resume.tex
+++ b/content/resume.tex
@@ -1,4 +1,4 @@
-% NOTE: This is very inspired from http://www.toofishes.net/blog/latex-resume-follow-up/
+% NOTE: This is very inspired by http://www.toofishes.net/blog/latex-resume-follow-up/
 
 \documentclass[10pt,letterpaper]{article}
 \usepackage[margin=0.75in]{geometry}
@@ -37,26 +37,80 @@ feugiat id, nibh.
 \vspace{-0.4em}
 \subsection*{Work Experience}
   \begin{itemize}
-    \parskip=0.1em
+    \parskip=-0.1em
+
+    % TWG
+    \item[]
+    {\href{http://www.twg.ca}{\textbf{The Working Group}} \hfill
+      \textbf{Toronto, ON}}
+    \\
+    {\emph{Software Developer} \hfill \emph{September 2011 - December 2011}}
+
+    \begin{itemize}[label=\textbullet]
+      \item TEST 1
+      \item TEST 2
+    \end{itemize}
+
+    % Xtreme
     \item[]
 
-    {\textbf{COMPANY} \hfill \textbf{LOCATION}}
+    {\href{http://www.xtremelabs.com/}{\textbf{Xtreme Labs}} \hfill
+      \textbf{Toronto, ON}}
     \\
-    {\emph{POSITION} \hfill \emph{START - END}}
+    {\emph{Agile Engineer} \hfill \emph{January 2011 - April 2011}}
 
-    \begin{itemize}
-    \item[\textbullet] TEST 1
-    \item[\textbullet] TEST 2
+    \begin{itemize}[label=\textbullet]
+      \item TEST 1
+      \item TEST 2
+    \end{itemize}
+
+    % Trapeze
+    \item[]
+    {\href{http://www.trapezegroup.com/}{\textbf{Trapeze Group}} \hfill
+      \textbf{Mississauga, ON}}
+    \\
+    {\emph{Software Developer} \hfill \emph{September 2011 - December 2011}}
+
+    \begin{itemize}[label=\textbullet]
+      \item TEST 1
+      \item TEST 2
     \end{itemize}
   \end{itemize}
 
 
 \hrule
 \vspace{-0.4em}
+\subsection*{Technical Skills}
+
+pulvinar mauris interdum euismod. Aliquam dui tellus, blandit at, tincidunt ac,
+feugiat id, nibh.
+\\
+
+\hrule
+\vspace{-0.4em}
 \subsection*{Interests}
+
+pulvinar mauris interdum euismod. Aliquam dui tellus, blandit at, tincidunt ac,
+feugiat id, nibh.
+\\
 
 \hrule
 \vspace{-0.4em}
 \subsection*{Education}
+  \begin{itemize}
+    \parskip=-0.1em
+
+    \item[]
+    {\href{http://www.uwaterloo.ca}{\textbf{University of Waterloo}} \hfill
+      \textbf{Waterloo, ON}}
+    \\
+    {\emph{Candidate for Bachelors of Software Engineering} \hfill
+      \emph{September 2009 - Present}}
+
+    \begin{itemize}[label=\textbullet]
+      \item TEST 1
+      \item TEST 2
+    \end{itemize}
+  \end{itemize}
 
 \end{document}
