--- a/content/resume.tex
+++ b/content/resume.tex
@@ -69,11 +69,15 @@ feugiat id, nibh.
     {\href{http://www.trapezegroup.com/}{\textbf{Trapeze Group}} \hfill
       \textbf{Mississauga, ON}}
     \\
-    {\emph{Software Developer} \hfill \emph{September 2011 - December 2011}}
+    {\emph{Software Developer} \hfill \emph{May 2010 - August 2010}}
 
     \begin{itemize}[label=\textbullet]
-      \item TEST 1
-      \item TEST 2
+      \item Created new web interface and search functionality for a product.
+      \item Designed and implemented new email templating functionality
+            requested by the client.
+      \item Completed over 50 feature requests.
+      \item Wrote a large number of tests for all modules worked with, which
+            then increased test coverage significantly.
     \end{itemize}
   \end{itemize}
 
@@ -81,10 +85,12 @@ feugiat id, nibh.
 \hrule
 \vspace{-0.4em}
 \subsection*{Technical Skills}
-
-pulvinar mauris interdum euismod. Aliquam dui tellus, blandit at, tincidunt ac,
-feugiat id, nibh.
-\\
+\begin{description}[labelindent=\parindent]
+  \item[Languages:]
+  C, C++, \LaTeX, Python
+  \item[Tools:]
+  Vim
+\end{description}
 
 \hrule
 \vspace{-0.4em}
@@ -108,8 +114,15 @@ feugiat id, nibh.
       \emph{September 2009 - Present}}
 
     \begin{itemize}[label=\textbullet]
-      \item TEST 1
-      \item TEST 2
+      \item Academic Projects
+      \begin{itemize}
+        \item Worked in a group to design and implement an operating system on
+              a Cortex-M3 ARM processor.
+        \item Designed and implemented a calculator and clock in Coldfire
+              assembly.
+        \item Created a compiler for a subset of C that targeted a subset of
+              MIPS.
+      \end{itemize}
     \end{itemize}
   \end{itemize}
 
