--- a/content/resume.tex
+++ b/content/resume.tex
@@ -20,17 +20,14 @@
 
 \href{http://www.github.com/zmanji/}{www.github.com/zmanji}\ \ \textbullet
 \ \ \href{http://www.zameermanji.com}{http://www.zameermanji.com}\ \ \textbullet
-\ \ \href{malto:zmanji@gmail.com}{zmanji@gmail.com}
+\ \ \href{malto:resume@zameermanji.com}{resume@zameermanji.com}
 
 \end{center}
 
 \hrule
 \vspace{-0.4em}
 \subsection*{Mission Statement}
-
-Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Quisque ut ante
-pulvinar mauris interdum euismod. Aliquam dui tellus, blandit at, tincidunt ac,
-feugiat id, nibh.
+I enjoy creating quality software.
 \\
 
 \hrule
@@ -38,6 +35,14 @@ feugiat id, nibh.
 \subsection*{Work Experience}
   \begin{itemize}
     \parskip=-0.1em
+
+    % DISQUS
+    \item[]
+    {\href{http://www.disqus.com}{\textbf{DISQUS}} \hfill
+      \textbf{San Francisco, CA}}
+    \\
+    {\emph{Intern} \hfill \emph{May 2012 - August 2012}}
+
 
     % TWG
     \item[]
@@ -47,6 +52,7 @@ feugiat id, nibh.
     {\emph{Software Developer} \hfill \emph{September 2011 - December 2011}}
 
     \begin{itemize}[label=\textbullet]
+      \itemsep0em
       \item TEST 1
       \item TEST 2
     \end{itemize}
@@ -60,8 +66,13 @@ feugiat id, nibh.
     {\emph{Agile Engineer} \hfill \emph{January 2011 - April 2011}}
 
     \begin{itemize}[label=\textbullet]
-      \item TEST 1
-      \item TEST 2
+      \itemsep0em
+      \item Implemented and designed the initial version of
+            \href{http://www.blutrumpet.com/}{Blu Trumpet} using Ruby on Rails.
+      \item Wrote Ruby bindings to the OpenX ad delivery service.
+      \item Designed and implemented all of the user portal JavaScript
+      \item Integrated payment service with Braintree Payment Solutions
+      \item Designed metric calculations
     \end{itemize}
 
     % Trapeze
@@ -72,6 +83,7 @@ feugiat id, nibh.
     {\emph{Software Developer} \hfill \emph{May 2010 - August 2010}}
 
     \begin{itemize}[label=\textbullet]
+      \itemsep0em
       \item Created new web interface and search functionality for a product.
       \item Designed and implemented new email templating functionality
             requested by the client.
@@ -87,18 +99,18 @@ feugiat id, nibh.
 \subsection*{Technical Skills}
 \begin{description}[labelindent=\parindent]
   \item[Languages:]
-  C, C++, \LaTeX, Python
-  \item[Tools:]
-  Vim
+  C, C++, Java, \LaTeX, Ruby (on Rails)
 \end{description}
 
 \hrule
 \vspace{-0.4em}
 \subsection*{Interests}
-
-pulvinar mauris interdum euismod. Aliquam dui tellus, blandit at, tincidunt ac,
-feugiat id, nibh.
-\\
+\begin{description}[labelindent=\parindent]
+  \item[Personal:]
+  Law, Politics, Open Government, Music, Reading
+  \item[Technical:]
+  Functional Programming, Embedded Systems, Performance Programming
+\end{description}
 
 \hrule
 \vspace{-0.4em}
@@ -114,8 +126,9 @@ feugiat id, nibh.
       \emph{September 2009 - Present}}
 
     \begin{itemize}[label=\textbullet]
-      \item Academic Projects
+      \item Academic Projects:
       \begin{itemize}
+        \itemsep0em
         \item Worked in a group to design and implement an operating system on
               a Cortex-M3 ARM processor.
         \item Designed and implemented a calculator and clock in Coldfire
