--- a/content/resume.tex
+++ b/content/resume.tex
@@ -27,7 +27,9 @@
 \hrule
 \vspace{-0.4em}
 \subsection*{Mission Statement}
-I enjoy creating quality software.
+I want to create software that solves real world problems. I don't care about
+social media or selling advertisements to users. I have interests in the music
+industry, telecommunications, embedded systems and scaling systems.
 \\
 
 \hrule
@@ -53,8 +55,9 @@ I enjoy creating quality software.
 
     \begin{itemize}[label=\textbullet]
       \itemsep0em
-      \item TEST 1
-      \item TEST 2
+      \item Worked on many Ruby on Rails projects.
+      \item Implemented features without assistance.
+      \item Worked with Backbone.js and CoffeeScript to enhance functionality.
     \end{itemize}
 
     % Xtreme
@@ -99,7 +102,7 @@ I enjoy creating quality software.
 \subsection*{Technical Skills}
 \begin{description}[labelindent=\parindent]
   \item[Languages:]
-  C, C++, Java, \LaTeX, Ruby (on Rails)
+  Assembly, C, C++, Java, JavaScript, \LaTeX, Ruby (on Rails)
 \end{description}
 
 \hrule
@@ -107,7 +110,7 @@ I enjoy creating quality software.
 \subsection*{Interests}
 \begin{description}[labelindent=\parindent]
   \item[Personal:]
-  Law, Politics, Open Government, Music, Reading
+  Law, Politics, Open Government, Music, Reading, Finance, Telecommunications
   \item[Technical:]
   Functional Programming, Embedded Systems, Performance Programming
 \end{description}
@@ -131,7 +134,7 @@ I enjoy creating quality software.
         \itemsep0em
         \item Worked in a group to design and implement an operating system on
               a Cortex-M3 ARM processor.
-        \item Designed and implemented a calculator and clock in Coldfire
+        \item Designed and implemented a calculator and digital clock in Coldfire
               assembly.
         \item Created a compiler for a subset of C that targeted a subset of
               MIPS.
