Simple Content Update.

--- a/content/resume.tex
+++ b/content/resume.tex
@@ -26,9 +26,9 @@
 \hrule
 \vspace{-0.4em}
 \subsection*{Mission Statement}
-I want to create software that solves real world problems. I don't care about
-social media or selling advertisements to users. I have interests in the music
-industry, telecommunications, embedded systems and scaling systems.
+I want to create software that solves real problems. I have interests in the
+music industry, telecommunications, embedded systems and scaling systems. I will
+not work for a "pre-revenue" company.
 \\
 
 \hrule
@@ -43,6 +43,11 @@ industry, telecommunications, embedded systems and scaling systems.
       \textbf{San Francisco, CA}}
     \\
     {\emph{Intern} \hfill \emph{May 2012 - August 2012}}
+
+    \begin{itemize}[label=\textbullet]
+      \itemsep0em
+      \item TBA
+    \end{itemize}
 
 
     % TWG
