Use proper LaTeX quotes. Thanks to @mhyee for pointing this out.

--- a/content/resume.tex
+++ b/content/resume.tex
@@ -28,7 +28,7 @@
 \subsection*{Mission Statement}
 I want to create software that solves real problems. I have interests in the
 music industry, telecommunications, embedded systems and scaling systems. I will
-not work for a "pre-revenue" company.
+not work for a ``pre-revenue'' company.
 \\
 
 \hrule
