Revised resume a bit.

--- a/content/resume.tex
+++ b/content/resume.tex
@@ -25,10 +25,11 @@
 
 \hrule
 \vspace{-0.4em}
-\subsection*{Mission Statement}
-I want to create software that solves real problems. I have interests in the
-music industry, telecommunications, embedded systems and scaling systems. I will
-not work for a ``pre-revenue'' company.
+\subsection*{About Me}
+I have interests in the music industry, telecommunications, embedded
+programming, scaling systems and programming language design. I'm not afraid to
+take initiative and make bold changes. I believe in iterating on solutions and
+creating maintainable software. I secretly hate computers.
 \\
 
 \hrule
@@ -106,7 +107,7 @@ not work for a ``pre-revenue'' company.
 \subsection*{Technical Skills}
 \begin{description}[labelindent=\parindent]
   \item[Languages:]
-  Assembly, C, C++, Java, JavaScript, \LaTeX, Ruby (on Rails)
+  Assembly, C, C++, Java, JavaScript, \LaTeX, Python, Ruby (on Rails)
 \end{description}
 
 \hrule
