--- a/content/resume.tex
+++ b/content/resume.tex
@@ -47,7 +47,16 @@ creating maintainable software. I secretly hate computers.
 
     \begin{itemize}[label=\textbullet]
       \itemsep0em
-      \item TBA
+      \item Worked on performance measurement tools forming the basis for the
+            open source projects:
+            \href{https://github.com/disqus/nose-performance}{\textit{nose-performance}}
+            and \href{https://github.com/disqus/zumanji}{\textit{Zumanji}}.
+      \item Worked on the infrastructure team to identify and remove performance
+            bottlenecks.
+      \item Independently audited the codebase to remove unused or inefficient
+            code.
+      \item Independently integrated code review and testing servers to test
+            patches before they were committed.
     \end{itemize}
 
 
