Cheap Hack to single page resume.

--- a/content/resume.tex
+++ b/content/resume.tex
@@ -119,15 +119,16 @@ creating maintainable software. I secretly hate computers.
   Assembly, C, C++, Java, JavaScript, \LaTeX, Python, Ruby (on Rails)
 \end{description}
 
-\hrule
-\vspace{-0.4em}
-\subsection*{Interests}
-\begin{description}[labelindent=\parindent]
-  \item[Personal:]
-  Law, Politics, Open Government, Music, Reading, Finance, Telecommunications
-  \item[Technical:]
-  Functional Programming, Embedded Systems, Performance Programming
-\end{description}
+% XXX: Comment this out to make resume one page.
+% \hrule
+% \vspace{-0.4em}
+% \subsection*{Interests}
+% \begin{description}[labelindent=\parindent]
+%   \item[Personal:]
+%   Law, Politics, Open Government, Music, Reading, Finance, Telecommunications
+%   \item[Technical:]
+%   Functional Programming, Embedded Systems, Performance Programming
+% \end{description}
 
 \hrule
 \vspace{-0.4em}
