Stub out Twitter in resume.

--- a/content/resume.tex
+++ b/content/resume.tex
@@ -38,6 +38,18 @@ creating maintainable software. I secretly hate computers.
   \begin{itemize}
     \parskip=-0.1em
 
+    % Twitter
+    \item[]
+    {\href{http://www.twitter.com}{\textbf{Twitter}} \hfill
+      \textbf{San Francisco, CA}}
+    \\
+    {\emph{Intern} \hfill \emph{January 2013 - April 2013}}
+
+    \begin{itemize}[label=\textbullet]
+      \itemsep0em
+      \item TBA
+    \end{itemize}
+
     % DISQUS
     \item[]
     {\href{http://www.disqus.com}{\textbf{DISQUS}} \hfill
