--- a/content/resume.tex
+++ b/content/resume.tex
@@ -47,7 +47,10 @@ creating maintainable software. I secretly hate computers.
 
     \begin{itemize}[label=\textbullet]
       \itemsep0em
-      \item TBA
+      \item Worked with the Analytics Infrastructure team to develop a low
+      latency message filtering platform.
+      \item Used Scala and Java to efficiently introspect Thrift messages.
+      \item Independently took on additional work and responsibilities.
     \end{itemize}
 
     % DISQUS
@@ -83,43 +86,44 @@ creating maintainable software. I secretly hate computers.
       \itemsep0em
       \item Worked on many Ruby on Rails projects.
       \item Implemented features without assistance.
-      \item Worked with Backbone.js and CoffeeScript to enhance functionality.
+      \item Worked with Backbone.js and CoffeeScript to enhance client-side
+      functionality.
     \end{itemize}
 
     % Xtreme
-    \item[]
+    % \item[]
 
-    {\href{http://www.xtremelabs.com/}{\textbf{Xtreme Labs}} \hfill
-      \textbf{Toronto, ON}}
-    \\
-    {\emph{Agile Engineer} \hfill \emph{January 2011 - April 2011}}
+    % {\href{http://www.xtremelabs.com/}{\textbf{Xtreme Labs}} \hfill
+    %   \textbf{Toronto, ON}}
+    % \\
+    % {\emph{Agile Engineer} \hfill \emph{January 2011 - April 2011}}
 
-    \begin{itemize}[label=\textbullet]
-      \itemsep0em
-      \item Implemented and designed the initial version of
-            \href{http://www.blutrumpet.com/}{Blu Trumpet} using Ruby on Rails.
-      \item Wrote Ruby bindings to the OpenX ad delivery service.
-      \item Designed and implemented all of the user portal JavaScript
-      \item Integrated payment service with Braintree Payment Solutions
-      \item Designed metric calculations
-    \end{itemize}
+    % \begin{itemize}[label=\textbullet]
+    %   \itemsep0em
+    %   \item Implemented and designed the initial version of
+    %         \href{http://www.blutrumpet.com/}{Blu Trumpet} using Ruby on Rails.
+    %   \item Wrote Ruby bindings to the OpenX ad delivery service.
+    %   \item Designed and implemented all of the user portal JavaScript
+    %   \item Integrated payment service with Braintree Payment Solutions
+    %   \item Designed metric calculations
+    % \end{itemize}
 
     % Trapeze
-    \item[]
-    {\href{http://www.trapezegroup.com/}{\textbf{Trapeze Group}} \hfill
-      \textbf{Mississauga, ON}}
-    \\
-    {\emph{Software Developer} \hfill \emph{May 2010 - August 2010}}
+    % \item[]
+    % {\href{http://www.trapezegroup.com/}{\textbf{Trapeze Group}} \hfill
+    %   \textbf{Mississauga, ON}}
+    % \\
+    % {\emph{Software Developer} \hfill \emph{May 2010 - August 2010}}
 
-    \begin{itemize}[label=\textbullet]
-      \itemsep0em
-      \item Created new web interface and search functionality for a product.
-      \item Designed and implemented new email templating functionality
-            requested by the client.
-      \item Completed over 50 feature requests.
-      \item Wrote a large number of tests for all modules worked with, which
-            then increased test coverage significantly.
-    \end{itemize}
+    % \begin{itemize}[label=\textbullet]
+    %   \itemsep0em
+    %   \item Created new web interface and search functionality for a product.
+    %   \item Designed and implemented new email templating functionality
+    %         requested by the client.
+    %   \item Completed over 50 feature requests.
+    %   \item Wrote a large number of tests for all modules worked with, which
+    %         then increased test coverage significantly.
+    % \end{itemize}
   \end{itemize}
 
 
@@ -131,16 +135,15 @@ creating maintainable software. I secretly hate computers.
   Assembly, C, C++, Java, JavaScript, \LaTeX, Python, Ruby (on Rails)
 \end{description}
 
-% XXX: Comment this out to make resume one page.
-% \hrule
-% \vspace{-0.4em}
-% \subsection*{Interests}
-% \begin{description}[labelindent=\parindent]
-%   \item[Personal:]
-%   Law, Politics, Open Government, Music, Reading, Finance, Telecommunications
-%   \item[Technical:]
-%   Functional Programming, Embedded Systems, Performance Programming
-% \end{description}
+\hrule
+\vspace{-0.4em}
+\subsection*{Interests}
+\begin{description}[labelindent=\parindent]
+  \item[Personal:]
+  Law, Politics, Open Government, Music, Reading, Finance, Telecommunications
+  \item[Technical:]
+  Functional Programming, Embedded Systems, Performance Programming
+\end{description}
 
 \hrule
 \vspace{-0.4em}
