--- a/content/resume.tex
+++ b/content/resume.tex
@@ -38,6 +38,20 @@ creating maintainable software. I secretly hate computers.
   \begin{itemize}
     \parskip=-0.1em
 
+
+    % Twitter 2.0
+    \item[]
+    {\href{http://www.twitter.com}{\textbf{Twitter}} \hfill
+      \textbf{San Francisco, CA}}
+    \\
+    {\emph{Intern} \hfill \emph{September 2013 - December 2013}}
+
+    \begin{itemize}[label=\textbullet]
+      \itemsep0em
+      \item TBA
+    \end{itemize}
+
+
     % Twitter
     \item[]
     {\href{http://www.twitter.com}{\textbf{Twitter}} \hfill
