--- a/content/resume.tex
+++ b/content/resume.tex
@@ -38,7 +38,6 @@ creating maintainable software. I secretly hate computers.
   \begin{itemize}
     \parskip=-0.1em
 
-
     % Twitter 2.0
     \item[]
     {\href{http://www.twitter.com}{\textbf{Twitter}} \hfill
@@ -48,9 +47,13 @@ creating maintainable software. I secretly hate computers.
 
     \begin{itemize}[label=\textbullet]
       \itemsep0em
-      \item TBA
+      \item Worked on the Cloud Infrastructure team on the Apache Aurora
+        scheduler for Apache Mesos.
+      \item Modified the API to be versioned and return uniform responses.
+      \item Added penalties to scheduling short lived tasks.
+      \item Improved redesigned the preempter to ensure high priority can always
+        obtain resources when possible.
     \end{itemize}
-
 
     % Twitter
     \item[]
