Remove fluf sections.

--- a/content/resume.tex
+++ b/content/resume.tex
@@ -144,23 +144,23 @@ creating maintainable software. I secretly hate computers.
   \end{itemize}
 
 
-\hrule
-\vspace{-0.4em}
-\subsection*{Technical Skills}
-\begin{description}[labelindent=\parindent]
-  \item[Languages:]
-  Assembly, C, C++, Java, JavaScript, \LaTeX, Python, Ruby (on Rails)
-\end{description}
+% \hrule
+% \vspace{-0.4em}
+% \subsection*{Technical Skills}
+% \begin{description}[labelindent=\parindent]
+%   \item[Languages:]
+%   Assembly, C, C++, Java, JavaScript, \LaTeX, Python, Ruby (on Rails)
+% \end{description}
 
-\hrule
-\vspace{-0.4em}
-\subsection*{Interests}
-\begin{description}[labelindent=\parindent]
-  \item[Personal:]
-  Law, Politics, Open Government, Music, Reading, Finance, Telecommunications
-  \item[Technical:]
-  Functional Programming, Embedded Systems, Performance Programming
-\end{description}
+% \hrule
+% \vspace{-0.4em}
+% \subsection*{Interests}
+% \begin{description}[labelindent=\parindent]
+%   \item[Personal:]
+%   Law, Politics, Open Government, Music, Reading, Finance, Telecommunications
+%   \item[Technical:]
+%   Functional Programming, Embedded Systems, Performance Programming
+% \end{description}
 
 \hrule
 \vspace{-0.4em}
