--- a/content/resume.tex
+++ b/content/resume.tex
@@ -26,10 +26,11 @@
 \hrule
 \vspace{-0.4em}
 \subsection*{About Me}
-I have interests in the music industry, telecommunications, embedded
-programming, scaling systems and programming language design. I'm not afraid to
-take initiative and make bold changes. I believe in iterating on solutions and
-creating maintainable software. I secretly hate computers.
+I am a recent University of Waterloo graduate with a Software Engineering
+background. I have many interests spanning telecommunications, embedded systems,
+distributed systems and programming language design and implementation. I'm not
+afraid to take risks or make bold changes. I believe creating well documented
+and well maintained software.  I secretly hate computers.
 \\
 
 \hrule
@@ -37,6 +38,19 @@ creating maintainable software. I secretly hate computers.
 \subsection*{Work Experience}
   \begin{itemize}
     \parskip=-0.1em
+
+    % Twitter FT
+    \item[]
+    {\href{http://www.twitter.com}{\textbf{Twitter}} \hfill
+      \textbf{San Francisco, CA}}
+    \\
+    {\emph{Software Engineer I} \hfill \emph{August 2014 - Present}}
+
+    \begin{itemize}[label=\textbullet]
+      \itemsep0em
+      \item Worked on the Cloud Infrastructure team on the
+        \href{aurora.incubator.apache.org}{Apache Aurora} scheduler for Apache Mesos.
+    \end{itemize}
 
     % Twitter 2.0
     \item[]
@@ -47,12 +61,12 @@ creating maintainable software. I secretly hate computers.
 
     \begin{itemize}[label=\textbullet]
       \itemsep0em
-      \item Worked on the Cloud Infrastructure team on the Apache Aurora
-        scheduler for Apache Mesos.
+      \item Worked on the Cloud Infrastructure team on the
+        \href{aurora.incubator.apache.org}{Apache Aurora} scheduler for Apache Mesos.
       \item Modified the API to be versioned and return uniform responses.
       \item Added penalties to scheduling short lived tasks.
-      \item Improved redesigned the preempter to ensure high priority can always
-        obtain resources when possible.
+      \item Improved the preemptor to terminate low priority tasks in favor of
+        high priority tasks.
     \end{itemize}
 
     % Twitter
@@ -64,48 +78,48 @@ creating maintainable software. I secretly hate computers.
 
     \begin{itemize}[label=\textbullet]
       \itemsep0em
-      \item Worked with the Analytics Infrastructure team to develop a low
-      latency message filtering platform.
-      \item Used Scala and Java to efficiently introspect Thrift messages.
+      \item Worked on the Analytics Infrastructure team to develop a stream
+        filtering system on top of Apache Kafka.
+      \item Used Scala and Java to dynamically introspect Thrift messages.
       \item Independently took on additional work and responsibilities.
     \end{itemize}
 
     % DISQUS
-    \item[]
-    {\href{http://www.disqus.com}{\textbf{DISQUS}} \hfill
-      \textbf{San Francisco, CA}}
-    \\
-    {\emph{Intern} \hfill \emph{May 2012 - August 2012}}
+    % \item[]
+    % {\href{http://www.disqus.com}{\textbf{DISQUS}} \hfill
+    %   \textbf{San Francisco, CA}}
+    % \\
+    % {\emph{Intern} \hfill \emph{May 2012 - August 2012}}
 
-    \begin{itemize}[label=\textbullet]
-      \itemsep0em
-      \item Worked on performance measurement tools forming the basis for the
-            open source projects:
-            \href{https://github.com/disqus/nose-performance}{\textit{nose-performance}}
-            and \href{https://github.com/disqus/zumanji}{\textit{Zumanji}}.
-      \item Worked on the infrastructure team to identify and remove performance
-            bottlenecks.
-      \item Independently audited the codebase to remove unused or inefficient
-            code.
-      \item Independently integrated code review and testing servers to test
-            patches before they were committed.
-    \end{itemize}
+    % \begin{itemize}[label=\textbullet]
+    %   \itemsep0em
+    %   \item Worked on performance measurement tools forming the basis for the
+    %         open source projects:
+    %         \href{https://github.com/disqus/nose-performance}{\textit{nose-performance}}
+    %         and \href{https://github.com/disqus/zumanji}{\textit{Zumanji}}.
+    %   \item Worked on the infrastructure team to identify and remove performance
+    %         bottlenecks.
+    %   \item Independently audited the codebase to remove unused or inefficient
+    %         code.
+    %   \item Independently integrated code review and testing servers to test
+    %         patches before they were committed.
+    % \end{itemize}
 
 
     % TWG
-    \item[]
-    {\href{http://www.twg.ca}{\textbf{The Working Group}} \hfill
-      \textbf{Toronto, ON}}
-    \\
-    {\emph{Software Developer} \hfill \emph{September 2011 - December 2011}}
+    % \item[]
+    % {\href{http://www.twg.ca}{\textbf{The Working Group}} \hfill
+    %   \textbf{Toronto, ON}}
+    % \\
+    % {\emph{Software Developer} \hfill \emph{September 2011 - December 2011}}
 
-    \begin{itemize}[label=\textbullet]
-      \itemsep0em
-      \item Worked on many Ruby on Rails projects.
-      \item Implemented features without assistance.
-      \item Worked with Backbone.js and CoffeeScript to enhance client-side
-      functionality.
-    \end{itemize}
+    % \begin{itemize}[label=\textbullet]
+    %   \itemsep0em
+    %   \item Worked on many Ruby on Rails projects.
+    %   \item Implemented features without assistance.
+    %   \item Worked with Backbone.js and CoffeeScript to enhance client-side
+    %   functionality.
+    % \end{itemize}
 
     % Xtreme
     % \item[]
@@ -152,15 +166,15 @@ creating maintainable software. I secretly hate computers.
 %   Assembly, C, C++, Java, JavaScript, \LaTeX, Python, Ruby (on Rails)
 % \end{description}
 
-% \hrule
-% \vspace{-0.4em}
-% \subsection*{Interests}
-% \begin{description}[labelindent=\parindent]
-%   \item[Personal:]
-%   Law, Politics, Open Government, Music, Reading, Finance, Telecommunications
-%   \item[Technical:]
-%   Functional Programming, Embedded Systems, Performance Programming
-% \end{description}
+\hrule
+\vspace{-0.4em}
+\subsection*{Interests}
+\begin{description}[labelindent=\parindent]
+  \item[Personal:]
+  Law, Politics, Open Government, Music, Reading, Finance, Telecommunications
+  \item[Technical:]
+  Functional Programming, Embedded Systems, Performance Programming
+\end{description}
 
 \hrule
 \vspace{-0.4em}
@@ -172,19 +186,18 @@ creating maintainable software. I secretly hate computers.
     {\href{http://www.uwaterloo.ca}{\textbf{University of Waterloo}} \hfill
       \textbf{Waterloo, ON}}
     \\
-    {\emph{Candidate for Bachelors of Software Engineering} \hfill
-      \emph{September 2009 - Present}}
+    {\emph{Bachelors of Software Engineering} \hfill
+      \emph{September 2009 - June 2014}}
 
     \begin{itemize}[label=\textbullet]
-      \item Academic Projects:
+      \item Selection of Academic Projects:
       \begin{itemize}
         \itemsep0em
+        \item Created a compiler for a subset of Java 1.3 that targeted the x86 architecture.
+        \item Submitted patches to the eCryptfs encrypted file system to support
+          integrity protecting cipher modes.
         \item Worked in a group to design and implement an operating system on
-              a Cortex-M3 ARM processor.
-        \item Designed and implemented a calculator and digital clock in Coldfire
-              assembly.
-        \item Created a compiler for a subset of C that targeted a subset of
-              MIPS.
+          a Cortex-M3 ARM processor.
       \end{itemize}
     \end{itemize}
   \end{itemize}
