Fix typo. Thanks to @NicholasPCole.

--- a/content/resume.tex
+++ b/content/resume.tex
@@ -29,7 +29,7 @@
 I am a recent University of Waterloo graduate with a Software Engineering
 background. I have many interests spanning telecommunications, embedded systems,
 distributed systems and programming language design and implementation. I'm not
-afraid to take risks or make bold changes. I believe creating well documented
+afraid to take risks or make bold changes. I believe in creating well documented
 and well maintained software.  I secretly hate computers.
 \\
 
